
History
-------

Latest snapshot:
	* SubDocCnt command has been added. Use it to specity the maximal number of sub-documents indexed per one document.
	* SubDocLevel command has been added. Use it to specify maximal nesting level for sub-documents.
	* HrefSection proccessing has been fixed in XML parser.
	* $(url.directory) meta-variable has been added.
	* storedoc.cgi accepts now the name of template in &tmplt= CGI-parameter.
	* Accept: HTTP header has been fixed for case when pattern is used for Content-Type in MIME command.
	* A bug in result merging has been fixed for multi-dbaddr mode.
	* allin<section>: operator has been added to the search query language.
	* storedoc.cgi takes now document from remote host if it unable to fetch it from stored database.
	
26 Jul 2008: 4.50
	* Default value for PopRankSkipSameSite command has been changed to "yes".
	* Possible memory leak has been fixed for a sub-document indexed from stored database.
	* The "strict" option has been added for Section command.
	* A word break has been added for French-style contractions.
	* Big lists of Russian and English synonyms have been added.
	* MaxSiteLevel command accept now a negative argument to group URLs on subdirectory basis.
	* The SkipUnreferred command has been extended to delete unreferred documents if necessary.
	* Del log processing has been fixed in splitter for case when cache log is empty.
	* Some German letters automatically replace by bi-letter combinations in accent-free search mode.
	  Eszett (scharfes S) -> SS, A with diaeresis -> AE, O with diaeresis -> OE, U with diaeresis -> UE.
	* SQLite3 support has been added. Use --with-sqlite3 option for configure to enable it.
	* Indexing has been fixed for documents with several versions in different languages. 
	  You need to execute "indexer -Erehashstored" command when upgrade.
	* HTML parser understands now <!-- google_ad_section_start -->, <!-- google_ad_section_start(weight=ignore) --> and